--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ classifiers = [
     "Programming Language :: Python",
     "Environment :: Console",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: BSD License",
+    "License :: Public Domain",
     "Operating System :: OS Independent",
     "Typing :: Typed",
     "Topic :: Software Development"]
